--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,75 @@
 body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 1.2em;
-	line-height: 1.65em;
+	line-height: 1.4em;
 }
 
 #container {
 	margin: 0 auto;
-	width: 960px;
+	max-width: 960px;
 }
 
 dt {
 	line-height: 2.6em;
+}
+
+.infobox {
+	float: right;
+	width: 35%;
+	line-height: 1.2em;
+	border-bottom: 1px solid #ddd;
+	margin: 0 2em;
+	padding: .2em;
+}
+
+.infobox p {
+	font-size: .8em;
+	line-height: 1.6em;
+	margin: 0;
+}
+
+hr.spacer {
+	border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    clear: both;
+}
+
+p.fineprint {
+	font-size: .6em;
+	color: #666;
+}
+
+.clearfix {
+	clear: both;
+}
+
+#schedule {
+	font-size: .8em;
+}
+
+#schedule div {
+	padding: 5px;
+	float: left;
+	min-width: 200px;
+	width: 18%;
+	background: #fff0ef;
+	border: 1px solid #ccc;
+	margin: 20px 5px;
+}
+
+#schedule h5 {
+	border-bottom: 1px solid #ccc;
+	margin: 5px 2px;
+	font-size: 1.1em;
+}
+
+#schedule ul {
+	padding: 0;
+	margin: 0;
+}
+
+#schedule ul li {
+	list-style-type: none;
 }
